HCC-453 configure gcp-haiilo provider with transferjob resource

--- a/package/crds/gcp-haiilo.upbound.io_providerconfigusages.yaml
+++ b/package/crds/gcp-haiilo.upbound.io_providerconfigusages.yaml
@@ -11,7 +11,7 @@ spec:
   names:
     categories:
     - crossplane
-    - provider
+    - providerconfig
     - gcp-haiilo
     kind: ProviderConfigUsage
     listKind: ProviderConfigUsageList
