--- a/examples/providerconfig/providerconfig.yaml
+++ b/examples/providerconfig/providerconfig.yaml
@@ -1,11 +1,12 @@
 apiVersion: gcp-haiilo.upbound.io/v1beta1
 kind: ProviderConfig
 metadata:
-  name: default
+  name: provider-gcp-haiilo
 spec:
+  projectID: test-dev-c391
   credentials:
     source: Secret
     secretRef:
-      name: example-creds
+      name: gcp-creds
       namespace: crossplane-system
-      key: credentials
+      key: creds
