--- a/package/crds/gcp-haiilo.upbound.io_providerconfigs.yaml
+++ b/package/crds/gcp-haiilo.upbound.io_providerconfigs.yaml
@@ -11,7 +11,7 @@ spec:
   names:
     categories:
     - crossplane
-    - provider
+    - providerconfig
     - gcp-haiilo
     kind: ProviderConfig
     listKind: ProviderConfigList
@@ -93,6 +93,7 @@ spec:
                     enum:
                     - None
                     - Secret
+                    - AccessToken
                     - InjectedIdentity
                     - Environment
                     - Filesystem
@@ -100,8 +101,13 @@ spec:
                 required:
                 - source
                 type: object
+              projectID:
+                description: ProjectID is the project name (not numerical ID) of this
+                  GCP ProviderConfig.
+                type: string
             required:
             - credentials
+            - projectID
             type: object
           status:
             description: A ProviderConfigStatus reflects the observed state of a ProviderConfig.
